# bitcoin-tui

./: .clang-format  .clang-tidy  .clangd  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  flake.nix
.github/workflows/: ci.yml  lint.yml  release.yml
contrib/guix/: README.md  guix-build  manifest_build.scm
contrib/guix/libexec/: build.sh  prelude.bash
contrib/windeploy/: bitcoin-tui.rc
doc/: ipc-coverage.md
lua/: api.lua
lua/examples/: dashboard.lua  feeratediagram.lua  slowblocks.lua  walletinfo.lua
lua/tabs/: dashboard.lua  feeratediagram.lua  network.lua  settings.lua  tools.lua
nix/: README.md  bitcoin-tui-debian.nix  bitcoin-tui-fedora.nix  bitcoin-tui-tar.nix  bitcoin-tui.nix
src/: bitcoind.cpp  bitcoind.hpp  format.hpp  guarded.hpp  ipc_client.cpp  ipc_client.hpp  json.hpp  logwatcher.cpp  logwatcher.hpp  luatable.cpp  luatable.hpp  main.cpp  paths.hpp  poll.cpp  poll.hpp  render.cpp  render.hpp  rpc_client.cpp  rpc_client.hpp  search.cpp  search.hpp  state.hpp  thread_safety.hpp
src/components/: address.hpp  footer_bar.cpp  footer_bar.hpp  footer_spec.hpp  gauge.hpp  hit_list.hpp  qr_overlay.hpp
src/elements/: address.hpp  footer_bar.cpp  footer_bar.hpp  qr_item.hpp  qr_overlay.hpp
src/interfaces/: chain.h  handler.h  init.h  mining.h  rpc.h  types.h
src/ipc/capnp/: chain-types.h  chain.capnp  common-types.h  common.capnp  handler-types.h  handler.capnp  init-types.h  init.capnp  mining-types.h  mining.capnp  rpc-types.h  rpc.capnp
src/tabs/: dashboard.cpp  dashboard.hpp  luatab.cpp  luatab.hpp  mempool.cpp  mempool.hpp  network.cpp  network.hpp  peers.cpp  peers.hpp  qrtest.cpp  qrtest.hpp  slowblocks.cpp  slowblocks.hpp  tab.hpp  tools.cpp  tools.hpp
src/util/: strencodings.h
tests/: CMakeLists.txt  test_bitcoind.cpp  test_cli.cpp  test_footer_spec.cpp  test_format.cpp  test_guarded.cpp  test_ipc.cpp  test_json.cpp  test_logwatcher.cpp  test_paths.cpp  test_rpc_config.cpp  test_state.cpp  test_strencodings.cpp
tests/lint/: git-subtree-check.sh
tests/mock/ipc/: init.h  init_v30.h  mining_v31.h
tests/util/: path_server.h
